--- a/react/shop/src/App.css
+++ b/react/shop/src/App.css
@@ -224,8 +224,8 @@ section {
 }
 
 section h3 {
-    margin-bottom: 1.75rem;
-    font-size: 1.5rem;
+    padding:150px 0 70px;
+    font-size: 1.75rem;
     font-weight: 700;
     letter-spacing: .075rem
 }
@@ -268,11 +268,31 @@ section h3 {
   text-decoration: line-through;
   color:#666;;
 }
+.about {
+    text-align: center;
+    padding-bottom: 20px;
+}
+.about b,
+.about p{ 
+    display:block;
+    margin-bottom: 30px;
+    line-height: 2;
+}
+.about img {
+    width: auto;
+    margin:0 auto;
+}
+
+
+
+
+
 .footer {
     width:94%;
     margin:1.5vw auto;
-    padding-left:170px;
+    padding: 3.5vw 0 1vw 170px;
     box-sizing: border-box;
+    border-top: 1px solid #919191;
 }
 .footer ul li {
     line-height: 1.75;
